<resources>
    <string name="ARABIC">العربية</string>
    <string name="app_name">الـمـطـبـخ الالـكـتـرونـي</string>
    <string name="login_email">البريد الإلكتروني</string>
    <string name="login_password">  كلمة المرور </string>
    <string name="login_forgot_password">  نسيت كلمة المرور </string>
    <string name="login_sign_up">  ليس لديك حساب ؟ سجل الان ..... </string>
    <string name="log_in"> تسجيل الدخول </string>
    <string name="hello">Hello</string>
    <string name="product_Image">صورة المنتج</string>
    <string name="save">حفظ</string>
    <string name="create_new_product">إنشاء منتج جديد</string>


    <string name="stores_browsing"> المتاجر  </string>
    <string name="my_orders"> طلباتي </string>
    <string name="sin_up"> إنشاء حساب جديد  </string>
    <string name="first_name">الإسم الأول</string>
    <string name="last_name">اسم العائلة</string>
    <string name="email">البريد الإلكتـروني</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="city">المدينة</string>
    <string name="madina">المدينة المنورة</string>
    <string name="makka">مكة</string>
    <string name="jeddah">جدة</string>
    <string name="address">العنوان</string>
    <string name="share_location">مشاركة الموقع</string>
    <string name="password">كلمة المرور</string>
    <string name="bands_agree"> اوافق على الشروط والاحكام</string>
    <string name="confirm">تـــــأكـيد</string>
    <string name="cancel"> الغــــاء</string>

    <string name="enter_way">طريقة دخول التطبيق</string>
    <string name="costumer_enter">الدخول كزبون</string>
    <string name="seller_enter">الدخول كبائع</string>
    <string name="driver_enter">الدخول كسائق</string>


    <string name="store_name">اسم المتجر</string>
    <string name="store_description">الـــــوصـــف</string>
    <string name="edit_profile"> تعديل بيانات المتجر</string>
    <string name="store_followers">المتابعين</string>
    <string name="store_following">المٌتابعون</string>
    <string name="store_products">المنتجات</string>
    <string name="title_activity_main_page3" translatable="false">MainPageActivity3</string>
    <string name="title_activity_store3" translatable="false">StoreActivity3</string>
    <string name="title_activity_costumer3">CostumerActivity3</string>

    <string name="store_create">إنشــاء</string>
    <string name="store_creation">إنشــاء المتجر</string>

    <string name="add_to_cart">إضــافة لـسـلة</string>
    <string name="quantity">الكمــية:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="ready_orders">الطــلبات المتاحة</string>

    <string name="customer_name">اســم الزبــون</string>
    <string name="order_details">تفاصــيل الطـلب:</string>
    <string name="from">مــن:</string>
    <string name="to">إلـى:</string>
    <string name="number_of_products">عدد المنتـجات:</string>
    <string name="price">الســـعر:</string>
    <string name="accept_order">قبـــول الطــلب</string>
    <string name="denial_order">لا أستطيع قبول هذا الطلب</string>
    <string name="back">العـــودة</string>


    <string name="zero">0</string>
    <string name="one">1</string>

    <string name="confirm_order">تـأكيد الطلب</string>
    <string name="product_name">اسـم المنتج</string>
    <string name="product_price">السـعر</string>
    <string name="product_Quantity">الكمـية</string>
    <string name="no_Date">لا توجــد بيـانـات</string>

    <string name="order_from">طلـب مـن:</string>
    <string name="Hello">مرحبا</string>


    <string name="from_store">من متجر  </string>
    <string name="store">اسم المتجر</string>
    <string name="order">الطلبات</string>
    <string name="status">حالة الطلب</string>
    <string name="current_status">الحالة الحالية:</string>
    <string name="received">تم الاستلام</string>
    <string name="wlecome_msg">مرحبا بك في المطبخ الالكتروني</string>
    <string name="ready"> جاهز للتوصيل </string>
    <string name="delivery"> الموافقة على توصيل الطلب </string>

    <string name="Order_Done">تــم الإنتهــــاء من الطلب</string>
    <string name="Order_FromStore">الطلـــب من متجــــر</string>
    <string name="Order_Tracking">تتــبع الطلـــــــب</string>

    <string name="Order_From_Store">طلـــب من متجـــر:</string>
    <string name="restore_password">إستعادة كلمة المرور</string>
    <string name="order_received">تــم استـــلام طلبـــي</string>
    <string name="total_price">الــســعــر الاجـــمــــالــي : </string>
    <string name="total_quantity">إجــمــالي الكـــمــيـة : </string>
    <string name="title_activity_maps">Map</string>

</resources>
