<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf4ef"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_first_name"
            android:layout_weight="0.77" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:id="@+id/text_first_name"
            android:layout_weight="0.20"
            android:textColor="#d25454"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_last_name"
            android:layout_weight="0.76" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:id="@+id/text_last_name"
            android:layout_weight="0.20"
            android:textColor="#d25454"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_email"
            android:layout_weight="0.84" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/text_email"
            android:layout_weight="0.12"
            android:textColor="#d25454"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_phone_number"
            android:layout_weight="0.77" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:id="@+id/text_phone_number"
            android:layout_weight="0.19"
            android:textColor="#d25454"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_address"
            android:layout_weight="0.72"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/text_address"
            android:layout_weight="0.23"
            android:textColor="#d25454"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/et_password"
            android:layout_weight="0.78" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/text_password"
            android:layout_weight="0.16"
            android:textColor="#d25454"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeddah"
                android:id="@+id/radioButton_jeddah"
                android:textSize="15dp"
                android:layout_weight="0.38" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/madina"
                android:id="@+id/radioButton_madina"
                android:textSize="15dp"
                android:layout_weight="0.19"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makka"
            android:id="@+id/radioButton_makka"
            android:textSize="15dp" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/text_city"
            android:textColor="#d25454"
            android:gravity="right" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            android:layout_gravity="right|bottom"
            android:background="#088d3d" />

        <Button
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:layout_gravity="left|bottom" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bands_agree"
            android:id="@+id/radioButton_bands_agree"
            android:layout_gravity="right|center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            android:id="@+id/btn_share_location"
            android:background="#61bcc6"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</LinearLayout>