<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/store_name"
        android:id="@+id/tracking_text_from_store"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/store"
        android:id="@+id/tracking_text_store"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order"
        android:id="@+id/tracking_text_order"
        android:layout_below="@+id/tracking_text_from_store"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_name"
        android:id="@+id/tracking_text_nameOfProduct"
        android:layout_below="@+id/tracking_text_order"
        android:layout_alignEnd="@+id/tracking_text_order" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_price"
        android:id="@+id/tracking_text_priceOfProduct"
        android:layout_alignBottom="@+id/tracking_text_nameOfProduct"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_Quantity"
        android:id="@+id/tracking_text_quantityOfProduct"
        android:layout_alignTop="@+id/tracking_text_priceOfProduct"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_name"
        android:id="@+id/tracking_text_product_name_val"
        android:layout_below="@+id/tracking_text_nameOfProduct"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_Quantity"
        android:id="@+id/tracking_text_product_quantity_val"
        android:layout_above="@+id/tracking_text_status"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/product_price"
        android:id="@+id/tracking_text_product_price_val"
        android:layout_above="@+id/tracking_text_status"
        android:layout_alignStart="@+id/tracking_text_priceOfProduct" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:id="@+id/tracking_text_status"
        android:layout_below="@+id/tracking_text_product_name_val"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="الحالة الحالية"
        android:id="@+id/tracking_text_current_status"
        android:layout_alignTop="@+id/tracking_text_status"
        android:layout_toStartOf="@+id/tracking_text_from_store" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received"
        android:id="@+id/tracking_btn_received"
        android:layout_marginTop="49dp"
        android:layout_below="@id/tracking_text_status"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
