<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ClassActivity.ShowReadyProduct"
    android:columnCount="1"
    android:rowCount="7">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#977fa5ab">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order_details"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#717cb4c0">

        <TextView
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/from"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/store_name"
            android:id="@+id/text_show_order_details_store_name"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_column="0"
        android:layout_row="3"
        android:background="#717cb4c0">

        <TextView
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/to"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_column="0"
        android:layout_row="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/costumer_name"
            android:id="@+id/text_show_order_details_store_costumer_name"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_column="0"
        android:layout_row="5"
        android:columnCount="2"
        android:rowCount="2"
        android:background="#717cb4c0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_column="0"
            android:layout_row="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/text_show_order_details_store_product_number"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.20"
                android:gravity="right"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/number_of_products"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.04"
                android:gravity="center"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_column="0"
            android:layout_row="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/text_show_order_details_store_price_number"
                android:layout_weight="0.20"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:layout_weight="0.09"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textSize="22sp" />

        </LinearLayout>
    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_column="0"
        android:layout_row="6">

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_order"
            android:id="@+id/btn_show_ready_product_accept_order"
            android:layout_gravity="right|bottom" />

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/btn_show_ready_product_back"
            android:layout_gravity="left|bottom" />
    </FrameLayout>

</GridLayout>
