<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ClassActivity.ShowReadyOrders"
    android:columnCount="1"
    android:rowCount="7">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#420f6ace">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#420f6ace"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order_details"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#717cb4c0">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/from"
            android:textColor="#ffffff"
            android:background="#420f6ace"
            android:textSize="20sp"
            android:paddingRight="15dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/store_name"
            android:id="@+id/text_tracking_for_driver_details_store_name"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_column="0"
        android:layout_row="3"
        android:background="#717cb4c0">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/to"
            android:textColor="#ffffff"
            android:background="#420f6ace"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:paddingRight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_column="0"
        android:layout_row="4">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/customer_name"
            android:id="@+id/text_tracking_for_driver_details_customer_name"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_column="0"
        android:layout_row="5"
        android:columnCount="2"
        android:rowCount="2"
        android:background="#717cb4c0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_column="0"
            android:background="#420f6ace"
            android:textColor="#ffffff"
            android:layout_row="0">

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:id="@+id/text_tracking_for_driver_details_product_number"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:gravity="center" />

            <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/number_of_products"
                android:layout_weight="0.024"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_column="0"
            android:background="#420f6ace"
            android:textColor="#ffffff"
            android:layout_row="1">

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/text_tracking_for_driver_details_price"
                android:textColor="#ffffff"
                android:gravity="center|center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"/>

            <net.rahmony.electronickitchen.ClassAssets.FontCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:textColor="#ffffff"
                android:layout_weight="0.04"
                android:gravity="center"
                android:textSize="22sp" />

        </LinearLayout>
    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_column="0"
        android:layout_row="6">

        <net.rahmony.electronickitchen.ClassAssets.FontCustomButton
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_order"
            android:textColor="#ffffff"
            android:background="#420f6ace"
            android:id="@+id/btn_tracking_for_driver_details_accept_order"
            android:layout_gravity="center"
            android:onClick="onClick" />

    </FrameLayout>

</GridLayout>
